--- a/game.html
+++ b/game.html
@@ -30,27 +30,29 @@
             <a target="_blank" href="https://linkedin.com/"><img class="social" src="images/linkedin (1).png" alt="linkedin"></a>
         </div>
         <!-- =========== card part start=============== -->
-        <div class="mainCard">
-            <div class="card">
-                <div class="childCard">
-                    <h1 class="welcome">
-                        Welcome to <br>
-                        <span>Guess the Number</span>
-                    </h1>
-                   <div class="gameRule">
-                    <p>
-                        Player 1 will secretly choose a number between 0 and 10. Player 2 guesses first. If wrong, Player 3
-                        guesses. If neither player guesses correctly within three attempts, Player 1 wins. Let's see who has
-                        the
-                        sharpest mind and can crack the code!
-                    </p>
-                   </div>
+        <div class="container">
+            <div class="mainCard">
+                <div class="card">
+                    <div class="childCard">
+                        <h1 class="welcome">
+                            Welcome to <br>
+                            <span>Guess the Number</span>
+                        </h1>
+                       <div class="gameRule">
+                        <p>
+                            Player 1 will secretly choose a number between 0 and 10. Player 2 guesses first. If wrong, Player 3
+                            guesses. If neither player guesses correctly within three attempts, Player 1 wins. Let's see who has
+                            the
+                            sharpest mind and can crack the code!
+                        </p>
+                       </div>
+                    </div>
+                    <!-- ================= card button ================= -->
+                    <button class="cardButton">
+                            Play <i class="fa-duotone fa-solid fa-play"></i>
+                    </button>
+                    <!-- ***************************************************** -->
                 </div>
-                <!-- ================= card button ================= -->
-                <button class="cardButton">
-                        Play <i class="fa-duotone fa-solid fa-play"></i>
-                </button>
-                <!-- ***************************************************** -->
             </div>
         </div>
     <!-- *********** card part ends ****************8 -->
