--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
             <a target="_blank" href="https://linkedin.com/"><img class="social" src="images/linkedin (1).png" alt="linkedin"></a>
         </div>
         <!-- =========== card part start=============== -->
-        <div class="container">
+        <!-- <div class="container"> -->
             <div class="mainCard">
                 <div class="card">
                     <div class="childCard">
@@ -54,7 +54,7 @@
                     <!-- ***************************************************** -->
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
     <!-- *********** card part ends ****************8 -->
         <div class="mainDiv">
             <div class="gameTitle">
